name:                network-transport-benchmarks
version:             0.0.0.1
synopsis:            Network Transport benchmarking suite
description:         Library implementing basic framework for benchmarking
                     network transport backends
homepage:            http://haskell-distributed.github.com
license:             BSD3
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@tweag.io
copyright:           (c) 2015, Tweag I/O
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:    Network.Transport.Benchmark
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       bytestring,
                       async >= 2.0 && < 3.0,
                       network-transport >= 0.4 && <1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
